2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega324): Correct the pagesize from 256 to
	128.
	This closes bug #16410: ATMega164/324/644 cannot be programmed

2006-08-20 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac: Check for gettimeofday().
	* ppiwin.c (gettimeofday): Define gettimeofday() replacement
	only if !defined(HAVE_GETTIMEOFDAY); use correct protype.

2006-08-18 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2: Minor cosmetic changes: STK500 firmware version
	numbers are M.NN, so always display the minor number as two
	digits.  Examine the response to the sign-on command to see which
	programmer hardware we are talking to, and then restrict the
	STK500 topcard display to devices detected as STK500.

2006-08-18 Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am: Add a dist-hook, and make it remove lexer.c,
	config_gram.c, and config_gram.h from the source distribution
	archive.  These files are supposed to be generated on the target
	system.
	Closes bug #15536: avrdude-5.1 compilation fails on Gentoo/amd64

2006-08-17 Joerg Wunsch <j@uriah.heep.sax.de>

	* stk500v2.c: unreverse the argument order for
	CMD_CHIP_ERASE_HVSP; Atmel says AVR068 is right, and
	stk500.exe is wrong.
	* configure.ac (AC_CHECK_LIB[usb]): Fix the generation
	of HAVE_LIBUSB in ac_cfg.h.

2006-08-17 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Neil Davey:
	patch #4539: Ability to control the bit clock (usleep) delay
	for ppi interface
	* bitbang.c: Implement bitbang_delay() and its calibration.
	* bitbang.h: Declare bitbang_delay().
	* main.c: Add the ispdelay option (-i).
	* pgm.h (struct programmer_t): Add the ispdelay parameter.
	* par.c: Add calls to bitbang_delay() when requested.
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)
	* avrdude.1: Document the new -i option.
	* doc/avrdude.texi: (Ditto.)

2006-08-14 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <chris@awaretechs.com>: